--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -9,7 +9,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color:#777;
-  margin:40 0 20px;
+  margin:0 0 20px;
 }
 
 p, ul, ol, table, pre, dl {
@@ -24,12 +24,9 @@ h1 {
   font-size:32px;
 }
 
-h2 {
-  color:#393939;
-}
-
-h3, h4, h5, h6 {
-  color:#494949;
+h2, h3, h4, h5, h6 {
+  font-size:32px;
+  color:#777;
 }
 
 a {
