--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
     <nav id="nav" class="section navigation" role="navigation">
       <h2>Navigation</h2>
       <ul>
-        <li><a href="#">Some Page</a></li>
+        <li><a href="/about/">About</a></li>
       </ul>
     </nav>
 
