--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,12 @@
       <h2>Navigation</h2>
       <ul>
         <li><a href="/about/">About</a></li>
+        <li><a href="/news/">News</a></li>
+        <li><a href="/resources/">Resources</a></li>
+        <li><a href="/interviews/">Interviews</a></li>
+        <li><a href="/lists/">Lists</a></li>
+        <li><a href="/lists/">Who's Who</a></li>
+                                                <li><a href="/about/">About</a></li>
       </ul>
     </nav>
 
