Working the nav items

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,8 +46,7 @@
         <li><a href="/resources/">Resources</a></li>
         <li><a href="/interviews/">Interviews</a></li>
         <li><a href="/lists/">Lists</a></li>
-        <li><a href="/lists/">Who's Who</a></li>
-                                                <li><a href="/about/">About</a></li>
+        <li><a href="../Who's Who/">Who's Who</a></li>
       </ul>
     </nav>
 
