--- a/css/site.css
+++ b/css/site.css
@@ -1,9 +1,9 @@
 /*!
-Updated:2013.01.19
+Updated:2013.03.20
 
 Author:
-Erik Runyon
-WeedyGarden.net
+Erik Runyon & Doug Gapinski
+responsive.ly is based on the original design Erik Runyon did for weedygarden.net
 
 CONTENTS
 -----------------------------------------
@@ -35,7 +35,7 @@ html {width:100%; margin:0; padding:0; font-size:100%; overflow-y:scroll;
        -o-hyphens:auto;
           hyphens:auto;
 }
-body {width:100%; margin:0; padding:0; color:#333; font:1em/1.5em Lato, "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif; background:#fff;}
+body {width:100%; margin:0; padding:0; color:#333; font:1.5em/2em Lato, "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif; background:#fff;}
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {display:block;}
 audio, canvas, video {display:inline-block; *display:inline; *zoom:1;}
 audio:not([controls]) {display:none;}
