--- a/css/site.css
+++ b/css/site.css
@@ -35,7 +35,7 @@ html {width:100%; margin:0; padding:0; font-size:100%; overflow-y:scroll;
        -o-hyphens:auto;
           hyphens:auto;
 }
-body {width:100%; margin:0;margin-left:auto; margin-right:auto; padding:10%; color:#333; font:1.5em/1.9em Lato, "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif; background:#fff;}
+body {width:100%; margin:0;margin-left:auto; margin-right:auto; padding:0; color:#333; font:1.5em/1.9em Lato, "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif; background:#fff;}
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {display:block;}
 audio, canvas, video {display:inline-block; *display:inline; *zoom:1;}
 audio:not([controls]) {display:none;}
