--- a/css/site.css
+++ b/css/site.css
@@ -35,7 +35,7 @@ html {width:100%; margin:0; padding:0; font-size:100%; overflow-y:scroll;
        -o-hyphens:auto;
           hyphens:auto;
 }
-body {width:100%; margin:0; padding:0; color:#333; font:1.5em/1.9em Lato, "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif; background:;}
+body {width:100%; margin:0; padding:0; color:#333; font:1.5em/1.9em Lato, "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif; background:#fff;}
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {display:block;}
 audio, canvas, video {display:inline-block; *display:inline; *zoom:1;}
 audio:not([controls]) {display:none;}
@@ -157,7 +157,7 @@ Figure & Fig caption
   /* HEADER
      ----------------------------------------------------*/
   .site-header {margin:0 0 2em;}
-    .site-header h1 {margin:0; font-size:1.8em; text-shadow:0 1px 1px rgba(255,255,255,0.5);}
+    .site-header h1 {margin:0; font-size:2.0em; text-shadow:0 1px 1px rgba(255,255,255,0.5);}
     .site-header h1 a {text-decoration:none; border:0 none;}
 
   /* CONTENT
