--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,6 @@
   <link rel="apple-touch-icon" sizes="114x114" href="/css/images/webclip-114.png">
   <link rel="apple-touch-icon" sizes="144x144" href="/css/images/webclip-144.png">
   <meta name="description" content="{{ site.description }}">
-  <meta name="author" content="Erik Runyon | WeedyGarden.com/WeedyGarden.net">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link href="/css/site.css" rel="stylesheet" type="text/css">
   <link href="/css/mobile.css" media="handheld" rel="stylesheet" type="text/css">
@@ -42,11 +41,10 @@
       <h2>Navigation</h2>
       <ul>
         <li><a href="/about/">About</a></li>
-        <li><a href="/news/">News</a></li>
         <li><a href="/resources/">Resources</a></li>
         <li><a href="/interviews/">Interviews</a></li>
         <li><a href="/lists/">Lists</a></li>
-        <li><a href="/who's who/">Who's Who</a></li>
+        <li><a href="/who's who/">Who’s Who</a></li>
       </ul>
     </nav>
 
