--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
     <nav id="nav" class="section navigation" role="navigation">
       <h2>Navigation</h2>
       <ul>
+        <li><a href="http://responsive.ly/">News</a></li>
         <li><a href="/about/">About</a></li>
         <li><a href="/resources/">Resources</a></li>
         <li><a href="/interviews/">Interviews</a></li>
