--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,3 +1,3 @@
 <ul class="social-links">
-  <li class="feed"><a href="{{ site.feed }}" rel="alternate" type="application/rss+xml"><img src="/css/images/feed.png" alt="Feed Icon" />Subscribe</a></li>
+  <li class="feed"><a href="atom.xml" rel="alternate" type="application/rss+xml"><img src="/css/images/feed.png" alt="Feed Icon" />Subscribe</a></li>
 </ul>
