set up authors and footer meta

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         <li><a href="/about/">About</a></li>
         <li><a href="/resources/">Resources</a></li>
         <li><a href="/lists/">Lists</a></li>
-        <li><a href="/who's who/">Who’s Who</a></li>
+        <li><a href="/whos-who/">Who&rsquo;s Who</a></li>
       </ul>
     </nav>
 
