--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,4 @@
 /*!
-Updated:2013.03.20
 
 Author:
 Erik Runyon & Doug Gapinski
@@ -104,7 +103,7 @@ h1.entry-title {margin:0 0 0.25em; font-size:1.8em; line-height:1em; font-weight
     h1.entry-title a:visited {}
 h2.byline {margin:0 0 1em; font-size:1em; font-family:Helvetica, Verdana, Arial, sans-serif;}
 .read-more:after {content:' ⋟';}
-.meta {margin:1em 0; font-style:italic;}
+.meta {margin:1em 0; font-style:italic; font-size:0.9em; line-height:1.2em;}
 
 pre	{overflow:auto; width:98%; margin:0 0 20px; padding:10px; background:#f9f9f9; border:1px solid #ccc; border-width:1px 0; font-family:monospace;}
 
@@ -243,8 +242,6 @@ Figure & Fig caption
     column-count:3;
   }
   .post-header h2 {font-size:2.2em;}
-
-  .post p {width:80%;}
   .post .alignright {margin-right:-20%;}
 
 }
