--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ bodyclass: post
       {% endif %}
       on {{ page.date | date: "%b %d, %Y" }} in 
       {% for category in page.categories %}
-      <a href="/categories/{{ category }}" title="{{ category }}" rel="category tag">{{ category }}</a>
+      <a href="/categories/{{ category }}" title="{{ category }}" rel="category tag">{{ category }}</a>{% if forloop.last == false %}, {%  endif %}
       {% endfor %}
     </p>
   </footer>
