--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ bodyclass: post
       {% else %}
          {{ site.authors.doug }} 
       {% endif %}
-      on {{ page.date | date: "%b %d, %Y" }}<!--> in 
+      on {{ page.date | date: "%b %d, %Y" }}<!-- in 
       {% for category in page.categories %}
       <a href="/categories/{{ category }}" title="{{ category }}" rel="category tag">{{ category }}</a>{% if forloop.last == false %}, {%  endif %}
       {% endfor %}
