fix Recent Posts styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
       </form>
     </section>
 
-    <section>
+    <section class="recent-posts">
       <h2>Recent Posts</h2>
       <ul>
         {% for post in site.posts limit:10 %}
