--- a/css/site.css
+++ b/css/site.css
@@ -177,7 +177,9 @@ Figure & Fig caption
   .sidebar section,
   .sidebar .section {margin:0 0 2em 0; padding:0;}
   .sidebar .social-links li {margin:0 0 1em;}
-  .recent-posts li {margin:0 0 1em; font-size:0.9em; line-height:1.2em;}
+  .recent-posts li {margin:0 0 1em; padding:0 0 0 1em; font-size:0.8em; line-height:1.2em; text-indent:-1em;}
+    .recent-posts a {display:block; text-decoration:none;}
+      .recent-posts a:hover {text-decoration:underline;}
 
   /* FOOTER
      ----------------------------------------------------*/
