fix header and mobile nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,12 @@
 </head>
 
 <body class="{{ bodyclass }}">
-<nav id="skip-links">
-  <ul>
-    <li><a href="#content">Skip to Content</a></li>
-    <li><a href="#nav">Skip to Nav</a></li>
-  </ul>
-</nav>
+  <nav class="skip-links">
+    <ul>
+      <li><a href="#content" class="s2c">Skip to Content</a></li>
+      <li><a href="#nav" class="s2n">Menu</a></li>
+    </ul>
+  </nav>
 <div class="wrapper">
   <header id="header" class="site-header" role="banner">
     <h1><a href="/">{{ site.name }}</a></h1>
