--- a/css/site.css
+++ b/css/site.css
@@ -98,7 +98,7 @@ hr {clear:both; width:100%;}
    ----------------------------------------------------*/
 .entry {margin:0 0 3em;}
   .blog-archives .entry {margin:0 0 1.5em 1.5em;}
-h1.entry-title {margin:0 0 0.25em; font-size:1.8em; line-height:1em; font-weight:normal;}
+h1.entry-title {margin:0 0 0.25em; font-size:1.2em; line-height:1em; font-weight:normal;}
   h1.entry-title a {text-decoration:none;}
     h1.entry-title a:visited {}
 h2.byline {margin:0 0 1em; font-size:1em; font-family:Helvetica, Verdana, Arial, sans-serif;}
@@ -150,13 +150,29 @@ Figure & Fig caption
      ----------------------------------------------------*/
   .wrapper {margin:40px 2% 0;}
   .wrapper:after {content:"."; display:block; height:0; clear:both; visibility:hidden;}
-  #skip-links { border:0; clip:rect(0 0 0 0); height:1px; margin:-1px; overflow:hidden; padding:0; position:absolute; width:1px; }
-  #skip-links:active, #skip-links:focus { clip:auto; height:auto; margin:0; overflow:visible; position:static; width:auto; }
+  .skip-links {display:block; clip:auto; position:relative; width:auto; height:auto; overflow:hidden; margin:0; font-size:0.8em; line-height:1.6em;}
+    .skip-links ul {margin:0; padding:0; list-style:none;}
+    .skip-links li {margin:0;}
+    .s2c {border:0; clip:rect(0 0 0 0); height:1px; margin:-1px; overflow:hidden; padding:0; position:absolute; width:1px;}
+      .s2c:active,
+      .s2c:focus {clip:auto; height:auto; margin:0; overflow:visible; position:static; width:auto;}
+    .s2n,
+    .s2n:visited {position:fixed; top:1em; right:1em; display:block; padding:0.25em 0.5em; border-radius:3px; color:#fff; text-shadow:0 1px 0 rgba(0,0,0,0.5); border:1px solid #31513c;
+      background:#8bc360;
+      background:-moz-linear-gradient(top,  #8bc360 0%, #3a6247 100%);
+      background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#8bc360), color-stop(100%,#3a6247));
+      background:-webkit-linear-gradient(top,  #8bc360 0%,#3a6247 100%);
+      background:-o-linear-gradient(top,  #8bc360 0%,#3a6247 100%);
+      background:-ms-linear-gradient(top,  #8bc360 0%,#3a6247 100%);
+      background:linear-gradient(to bottom,  #8bc360 0%,#3a6247 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8bc360', endColorstr='#3a6247',GradientType=0 );
+    }
+      .s2n:before {content:'☰'; margin-right:0.2em;}
 
   /* HEADER
      ----------------------------------------------------*/
   .site-header {margin:0 0 2em;}
-    .site-header h1 {margin:0; font-size:2.0em; text-shadow:0 1px 1px rgba(255,255,255,0.5);}
+    .site-header h1 {margin:2em 0 0; font-size:2.0em; text-shadow:0 1px 1px rgba(255,255,255,0.5);}
     .site-header h1 a {text-decoration:none; border:0 none;}
 
   /* CONTENT
@@ -192,6 +208,10 @@ Figure & Fig caption
 /*************************************************************************************
  * 3. Media Queries
  ************************************************************************************/
+/* 444 */
+@media only screen and (min-width:27.75em) {
+  .site-header h1 {margin:0;}
+}
 
 /* 580 */
 @media only screen and (min-width:36.25em) {
@@ -219,13 +239,14 @@ Figure & Fig caption
   }
 
   .wrapper {max-width:1200px; margin:60px 0 0 6%; height:1%;}
-  #skip-links { border:0; clip:rect(0 0 0 0); height:1px; margin:-1px; overflow:hidden; padding:0; position:absolute; width:1px; }
-  #skip-links:active, #skip-links:focus { clip:auto; height:auto; margin:0; overflow:visible; position:static; width:auto; }
+  .skip-links { border:0; clip:rect(0 0 0 0); height:1px; margin:-1px; overflow:hidden; padding:0; position:absolute; width:1px; }
+  .skip-links:active, .skip-links:focus { clip:auto; height:auto; margin:0; overflow:visible; position:static; width:auto; }
 
   .site-header {}
-    .site-header h1 {margin:0; padding:0;}
+    .site-header h1 {padding:0;}
 
   .content {float:left; width:65%; margin:0 5% 0 0; padding:0;}
+  h1.entry-title {font-size:1.8em;}
   .sidebar {float:right; width:30%; padding:1em; color:#777; border:none; background-color:rgba(255, 255, 255, 0.8);}
   .site-footer {text-align:left;}
 }
