--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,5 @@
 {% if page.bodyclass.size > 0 %}{% assign bodyclass = page.bodyclass %}{% else %}{% assign bodyclass = '' %}{% endif %}
+{% if page.description.size > 0 %}{% assign description = page.description %}{% else %}{% assign description = site.description %}{% endif %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
   <link rel="apple-touch-icon" sizes="72x72" href="/css/images/webclip-72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="/css/images/webclip-114.png">
   <link rel="apple-touch-icon" sizes="144x144" href="/css/images/webclip-144.png">
-  <meta name="description" content="{{ site.description }}">
+  <meta name="description" content="{{ description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link href="/css/site.css" rel="stylesheet" type="text/css">
   <link href="/css/mobile.css" media="handheld" rel="stylesheet" type="text/css">
